# white-dew

./: .gitignore  Cargo.toml  README.md
apps/whitedew/: Cargo.toml
apps/whitedew/src/: documents.rs  localization.rs  main.rs  state.rs
crates/stdext/: Cargo.toml
crates/stdext/src/: helpers.rs  lib.rs
crates/stdext/src/arena/: debug.rs  mod.rs  release.rs  scratch.rs  string.rs
crates/stdext/src/sys/: mod.rs  unix.rs
crates/whitedew_core/: Cargo.toml
crates/whitedew_core/src/: apperr.rs  base64.rs  cell.rs  clipboard.rs  framebuffer.rs  helpers.rs  icu.rs  input.rs  lib.rs  oklab.rs  path.rs  tui.rs  vt.rs
crates/whitedew_core/src/buffer/: mod.rs
crates/whitedew_core/src/simd/: memchr2.rs  mod.rs
crates/whitedew_core/src/sys/: unix.rs
crates/whitedew_core/src/unicode/: measurement.rs  mod.rs  utf8.rs
